8330027: Identity hashes of archived objects must be based on a reproducible random seed

Reviewed-by: mdoerr
Backport-of: 9f43ce5a725b212cec0f3cd17491c4bada953676